Bug 1420101 - Add default enabled pref for Array.prototype.values. r=jandem,bz